fixing new layout issues

--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ body {
 	background-color: #FFFFFF;
 	border-bottom: solid 1px #E0E0E0;
 	text-align: center;
+	z-index: 1000;
 }
 
 #main {
